Funcion para agregar firma y poder imprimir acuse de recibo

--- a/src/app/paginas/administrador/usuarios/usuarios.component.css
+++ b/src/app/paginas/administrador/usuarios/usuarios.component.css
@@ -123,6 +123,13 @@ p{
   font-family:'montse-medium' ;
 }
 
+#selfirma{
+  background: transparent;
+  border: none;
+  color: blue;
+}
+
+
 /*estilos responsivos*/
 @media (max-width: 576px) {
   option{
