Funcion para agregar firma y poder imprimir acuse de recibo

--- a/src/app/paginas/usuario/enviados/enviados.component.css
+++ b/src/app/paginas/usuario/enviados/enviados.component.css
@@ -159,9 +159,11 @@ tbody{
 }
 
 .imgfirmem{
-  width: 292px;
   height: 124px;
-  border-bottom: 3px solid black;
+}
+
+.bordeFirma{
+  border-top: 3px solid black;
 }
 
 .acuse > p{
