--- a/src/app/paginas/usuario/recibidos/recibidos.component.css
+++ b/src/app/paginas/usuario/recibidos/recibidos.component.css
@@ -94,9 +94,11 @@ h2 {
 }
 
 .imgfirmem{
-  width: 292px;
   height: 124px;
-  border-bottom: 3px solid black;
+}
+
+.bordeFirma{
+  border-top: 3px solid black;
 }
 
 .acuse > p{
