--- a/src/app/paginas/usuario/enviados/enviados.component.html
+++ b/src/app/paginas/usuario/enviados/enviados.component.html
@@ -44,12 +44,14 @@
             <td [ngClass]="{'reciente': enc.estado == 'RECIENTE', 'pendiente': enc.estado == 'PENDIENTE'}">{{enc.estado}}</td>
             <td title="Ver mas detalles">
                 <fa-icon [icon]="faEye" (click)="verEncomienda(enc.id_encomienda,modalVerEncomienda)"> </fa-icon>
-            <td title="Editar Encomienda">
-                <fa-icon *ngIf="usuario.nombre==enc.emisor && enc.estado!='CONFIRMADO'" class="trash" [icon]="faPen" (click)="editarEncomienda(enc, modalEditarEncomienda)" > </fa-icon>
+            <td  *ngIf="usuario.nombre==enc.emisor && enc.estado!='CONFIRMADO'" title="Editar Encomienda" >
+                <fa-icon  class="trash" [icon]="faPen" (click)="editarEncomienda(enc, modalEditarEncomienda)" > </fa-icon>
             </td>
+            <td *ngIf="usuario.nombre!=enc.emisor && enc.estado!='CONFIRMADO'"></td>
             <td *ngIf="usuario.nombre==enc.emisor && enc.estado=='CONFIRMADO'">
               <button class="aceptar" (click)="verAcuse(enc, modalVerAcuse)"><fa-icon [icon]="faPrint"> </fa-icon> <u> imprimir</u></button>
             </td>
+            <td *ngIf="usuario.nombre!=enc.emisor && enc.estado=='CONFIRMADO'"></td>
           </tr>
         </tbody>
       </table>
@@ -172,11 +174,11 @@
       <div class="firma">
           <div class="firmem">
               <img class="imgfirmem" src="{{acuseRecibo.firma_emisor}}" alt="{{acuseRecibo.emisor}}">
-              <p><b>Firma quien envia</b></p>
+              <p class="bordeFirma"><b>Firma quien envia</b></p>
           </div>
           <div class="firmem">
               <img class="imgfirmem" src="{{acuseRecibo.firma_receptor}}" alt="{{acuseRecibo.receptor}}">
-              <p><b>Firma quien Recibe</b></p>
+              <p class="bordeFirma"><b>Firma quien Recibe</b></p>
           </div>
       </div>
     </div>
