--- a/src/app/paginas/administrador/encomiendas/encomiendas.component.html
+++ b/src/app/paginas/administrador/encomiendas/encomiendas.component.html
@@ -109,7 +109,7 @@
       <p *ngIf="encom.descripcion_transporte !== null"> <b>Descripción de transporte: </b>{{ encom.descripcion_transporte}}</p>
       <p> <b>Fecha y hora de salida:</b> {{ encom.fecha_envio }} {{ encom.hora_envio }}</p>
       <p> <b>Fecha y hora de llegada:</b> {{ encom.fecha_llegada }} {{ encom.hora_llegada }}</p>
-      <p> <b>Descripción: </b>{{ encom.descripcion }}</p>
+      <p class="descr"> <b>Descripción: </b>{{ encom.descripcion }}</p>
     </div>
   </div>
   <div class="modal-footer">
