--- a/src/app/paginas/usuario/enviados/enviados.component.css
+++ b/src/app/paginas/usuario/enviados/enviados.component.css
@@ -114,6 +114,7 @@ tbody{
   border: 2px solid black;
   margin: 15px;
   width: 1019px;
+  height: 1200px;
 }
 
 .myCustomModalClass .modal-dialog {
@@ -140,18 +141,22 @@ tbody{
 
 .firma{
   display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
   justify-content: space-around;
-  align-items: stretch;
-  align-content: stretch;
-  margin-top: 25%;
-  position: relative;
+  width: 80%;
+  bottom: 10%;
+  left: 30px;
+  position: absolute;
 }
 
 .cuerpo{
   margin-top: 50px;
   margin-left: 50px;
+  font-size: 15px;
+}
+
+.imprimir{
+  background-color: rgb(118, 231, 118);
+  border: 1px solid black;
 }
 
 .firmem{
@@ -170,13 +175,15 @@ tbody{
   font-size: x-large;
   margin-top: 35px;
 }
-
 .aceptar{
   color:blue;
   background-color: transparent;
   border: 0;
 }
 
+.descr{
+  white-space: pre-line;
+}
 @media (max-width: 576px) {
   select, option{
     font-size: 10px;
