--- a/src/app/paginas/usuario/enviados/enviados.component.html
+++ b/src/app/paginas/usuario/enviados/enviados.component.html
@@ -47,11 +47,11 @@
             <td  *ngIf="usuario.nombre==enc.emisor && enc.estado!='CONFIRMADO'" title="Editar Encomienda" >
                 <fa-icon  class="trash" [icon]="faPen" (click)="editarEncomienda(enc, modalEditarEncomienda)" > </fa-icon>
             </td>
-            <td *ngIf="usuario.nombre!=enc.emisor && enc.estado!='CONFIRMADO'"></td>
-            <td *ngIf="usuario.nombre==enc.emisor && enc.estado=='CONFIRMADO'">
+            <!--td *ngIf="usuario.nombre!=enc.emisor && enc.estado!='CONFIRMADO'"></td-->
+            <td *ngIf="enc.estado=='CONFIRMADO'">
               <button class="aceptar" (click)="verAcuse(enc, modalVerAcuse)"><fa-icon [icon]="faPrint"> </fa-icon> <u> imprimir</u></button>
             </td>
-            <td *ngIf="usuario.nombre!=enc.emisor && enc.estado=='CONFIRMADO'"></td>
+            <!--td *ngIf="usuario.nombre!=enc.emisor && enc.estado=='CONFIRMADO'"></td-->
           </tr>
         </tbody>
       </table>
@@ -95,7 +95,7 @@
       <p *ngIf="encom.descripcion_transporte !== null"> <b>Descripción de transporte: </b>{{ encom.descripcion_transporte}}</p>
       <p> <b>Fecha y hora de salida:</b> {{ encom.fecha_envio }} {{ encom.hora_envio }}</p>
       <p> <b>Fecha y hora de llegada:</b> {{ encom.fecha_llegada }} {{ encom.hora_llegada }}</p>
-      <p> <b>Descripción: </b>{{ encom.descripcion }}</p>
+      <p class="descr"> <b>Descripción: </b>{{ encom.descripcion }}</p>
     </div>
   </div>
   <div class="modal-footer">
@@ -169,11 +169,11 @@
           <p> <b>Atendido por: </b> {{acuseRecibo.receptor}}</p>
           <p> <b>Fecha y hora de salida:</b> {{acuseRecibo.fecha_envio}}</p>
           <p> <b>Fecha y hora de llegada:</b> {{acuseRecibo.fecha_llegada}}</p>
-          <p> <b>Descripción: </b>{{acuseRecibo.descripcion}} </p>
+          <p class="descr"> <b>Descripción: </b>{{acuseRecibo.descripcion}} </p>
       </div>
       <div class="firma">
           <div class="firmem">
-              <img class="imgfirmem" src="{{acuseRecibo.firma_emisor}}" alt="{{acuseRecibo.emisor}}">
+              <img class="imgfirmem" src="{{acuseRecibo.firma_emisor}}" alt="{{acuseRecibo.emisor}}" oncontextmenu="return false"/>
               <p class="bordeFirma"><b>Firma quien envia</b></p>
           </div>
           <div class="firmem">
@@ -184,7 +184,7 @@
     </div>
     <div class="modal-footer">
       <button type="button" class="btn btn-outline-dark" (click)="modal.close('Cerrar')">Cerrar</button>
-      <button class="btn btnPilarh" 
+      <button class="btn imprimir btnPilarh" 
       printSectionId="acuse"
       [useExistingCss]="true"
       ngxPrint>Imprimir</button><br>
